--- a/4-api/4-1-slides.ipynb
+++ b/4-api/4-1-slides.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{\"first\": \"Arial\", \"last\": \"Survellence\"}]\n",
+      "[{\"first\": \"Joe\", \"last\": \"King\"}]\n",
       "\n"
      ]
     }
@@ -853,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
