--- a/4-api/4-2-slides.ipynb
+++ b/4-api/4-2-slides.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
     "import requests\n",
     "import requests_cache as rq\n",
     "\n",
-    "apikey = 'YOURAPIKEYHERE'\n",
+    "apikey = '6502ef18c563ffdc99b1bc4c'\n",
     "pickle_file = 'geocode_cache.pkl'\n",
     "location = 'Syracuse, NY'\n",
     "cache_key = location.lower()\n",
@@ -211,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
